kustomize/opencost/opencost/base/opencost.yaml
# <https://www.opencost.io/docs/>

# The namespace OpenCost will run in
apiVersion: v1
kind: Namespace
metadata:
  name: opencost
---

# Create a deployment for a single cost model pod
#
# See environment variables if you would like to add a Prometheus for
# cost model to read from for full functionality.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencost
  namespace: opencost
  labels:
    app: opencost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opencost
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: opencost
    spec:
      restartPolicy: Always
      serviceAccountName: opencost
      containers:
      - image: quay.io/kubecost1/kubecost-cost-model:latest
        name: opencost
        resources:
          requests:
            cpu: "10m"
            memory: "55M"
          limits:
            cpu: "999m"
            memory: "1G"
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 1001
      - image: quay.io/kubecost1/opencost-ui:latest
        name: opencost-ui
        resources:
          requests:
            cpu: "10m"
            memory: "55M"
          limits:
            cpu: "999m"
            memory: "1G"
        imagePullPolicy: Always
---

# Expose the cost model with a service
#
# Without a Prometheus endpoint configured in the deployment,
# only opencost/metrics will have useful data as it is intended
# to be used as only an exporter.
kind: Service
apiVersion: v1
metadata:
  name: opencost
  namespace: opencost
spec:
  selector:
    app: opencost
  type: ClusterIP
  ports:
  - name: opencost
    port: 9003
    targetPort: 9003
  - name: opencost-ui
    port: 9090
    targetPort: 9090
---
